--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	],
 	"require": {
 		"php": ">=5.4.0",
-		"guzzlehttp/guzzle": "~5.0",
+		"guzzlehttp/guzzle": ">=5.0",
 		"firebase/php-jwt": "1.*",
 		"nesbot/carbon": "~1.0"
 	},
